// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Snapshot tests should match snapshot 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with fatal error 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="error"
      role="alert"
    >
      <span
        class="errorHeader"
      >
        Превышено количество попыток ввода кода
      </span>
      <span
        class="errorText"
      >
        Выполните операцию с самого начала
      </span>
      <button
        class="component secondary xs component secondary"
        type="button"
      >
        <span
          class="text stretchText"
        >
          Понятно
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with masked phone 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          <div>
            Код отправлен на
             
            +7 ··· ··· 55-66
          </div>
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with nonFatal error 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        <div
          class="error"
          role="alert"
        >
          Неверный код
        </div>
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left hasError"
        >
          
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with overlimit fatal error 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component"
    >
      <div
        class="alertIcon"
      >
        <svg
          data-test-id="alert-icon"
          fill="currentColor"
          focusable="false"
          height="64"
          role="img"
          viewBox="0 0 24 24"
          width="64"
        >
          <path
            clip-rule="evenodd"
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm-4-7.5l2.586-2.5L8 9.5 9.5 8l2.5 2.586L14.5 8 16 9.5 13.414 12 16 14.5 14.5 16 12 13.414 9.5 16 8 14.5z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="title"
      >
        Превышено количество
 попыток ввода кода
      </span>
      <div
        class="description"
      >
        <div>
          Повторное подтверждение кодом из SMS
 будет возможно через
        </div>
        <div
          class="countdown"
        >
          <svg
            class="loader"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <circle
              class="circle"
              cx="8"
              cy="8"
              r="7"
              stroke-dasharray="43.98"
              stroke-dashoffset="0.00"
              transform="rotate(-90 8 8)"
            />
          </svg>
          <div
            class="timePassed"
          >
            01:00
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with signTitle as react node 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <div>
        <h1>
          Кастомный заголовок как react node
        </h1>
      </div>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with signTitle as string 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Кастомный заголовок как текст
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot with unmasked phone 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="countdown countdown"
      >
        <div
          class="component left"
        >
          <div>
            Код отправлен на
             
            +7 999 888-55-66
          </div>
          <div>
            <div
              class="info"
            >
              Запросить повторно можно через
            </div>
            <div
              class="loaderWrap"
            >
              <svg
                class="loader"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <circle
                  class="circle"
                  cx="8"
                  cy="8"
                  r="7"
                  stroke-dasharray="43.98"
                  stroke-dashoffset="0.00"
                  transform="rotate(-90 8 8)"
                />
              </svg>
              <div
                class="timePassed"
              >
                01:00
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;

exports[`Confirmation Snapshot tests should match snapshot without smsCountdown 1`] = `
<div>
  <div
    class="component left"
  >
    <div
      class="component left"
    >
      <span
        class="header"
      >
        Введите код из сообщения
      </span>
      <div
        class="inputContainer"
      >
        <div
          class="component codeInput"
        >
          <input
            autocomplete="one-time-code"
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="1"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="2"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="3"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="4"
          />
          <input
            autocomplete=""
            class="input left"
            inputmode="numeric"
            pattern="[0-9]*"
            value="5"
          />
        </div>
        
      </div>
      <div
        class="smsComeLinkWrap"
      >
        <a
          class="component secondary pseudo smsComeLink"
        >
          <span
            class="text"
          >
            Не приходит сообщение?
          </span>
        </a>
      </div>
      <div />
    </div>
  </div>
</div>
`;
